--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ font-family: sans-serif;
 .hero{
     width: 100%;
     height: 100vh;
-    background-image: url(images/moon.jpg);
+    background-image: linear-gradient(0deg, rgba(17, 17, 17, 0.3), rgba(37, 37, 37, 0.3)), url(images/moon.jpg);
     background-position: center;
     background-size: cover;
     overflow: hidden;
@@ -35,7 +35,7 @@ font-family: sans-serif;
 
 button{
     color:#fbfcfd;
-    padding:10px 25px;
+    padding:12px 25px;
     background: transparent;
     border:1px solid #fff;
     border-radius: 20px;
@@ -51,10 +51,13 @@ button{
     z-index: 2;
 }
 h1{
+    position: relative;
     font-size: 80px;
-    margin:10px 0 30px;
+    margin:10px 0 50px;
     line-height: 80px;
+    
 }
+
 .side-bar{
     width: 70px;
     height: 100vh;
@@ -103,36 +106,36 @@ h1{
     animation: hoover 7s linear infinite ;
 }
 .asteroids img:nth-child(1){
-    animation-duration: 5s;
-    width:200px
+    animation-duration: 11s;
+    width:200px;
 }
 .asteroids img:nth-child(2){
-    animation-duration: 6.7s;
+    animation-duration: 10s;
     width:150px
 }
 .asteroids img:nth-child(3){
-    animation-duration: 4.5s;
+    animation-duration: 18s;
     width:78px
 }
 .asteroids img:nth-child(4){
     
-    animation-duration: 8s;
+    animation-duration: 12s;
     width:50px
 }
 .asteroids img:nth-child(5){
-    animation-duration: 5.5s;
+    animation-duration: 14.5s;
     width:200px
 }
 .asteroids img:nth-child(6){
-    animation-duration: 6.5s;
+    animation-duration: 17.5s;
     width:90px
 }
 .asteroids img:nth-child(7){
-    animation-duration: 8s;
+    animation-duration: 15s;
     width:200px
 }
 .asteroids img:nth-child(8){
-    animation-duration: 8s;
+    animation-duration: 20s;
     width:200px
 }
 @keyframes hoover{
@@ -153,5 +156,33 @@ h1{
         transform: scale(50px);
         transform: translateY(-80vh);
         opacity:0;
+    }
+}
+
+/* responsive styling */
+@media (max-width: 900px) {
+    .navbar{
+       width:80%
+    }
+}
+@media (max-width: 600px) {
+    .navbar{
+       width:70%
+    }
+    h1{
+        font-size: 70px;
+    }
+}
+@media (max-width: 400px) {
+    .navbar{
+       width:65%;
+       height: 13%;
+    }
+    .logo{
+        font-size: 35px;
+    }
+    h1{
+        font-size: 50px;
+        line-height: normal;
     }
 }
