--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ font-family: sans-serif;
     position: relative;
     
 }
+
 .navbar{
     width:85%;
     height:15%;
@@ -37,10 +38,14 @@ button{
     color:#fbfcfd;
     padding:12px 25px;
     background: transparent;
-    border:1px solid #fff;
+    border:1px solid rgb(112, 112, 112);
     border-radius: 20px;
     outline: none;
     cursor: pointer;
+    transition: 0.3s;
+}
+button:hover{
+    background-color: rgba(0,0,0,0.5);
 }
 .content{
     color: #fbfcfd;
@@ -57,13 +62,46 @@ h1{
     line-height: 80px;
     
 }
+#cursor {
+    background: black;
+    line-height: 17px;
+    margin-left: 2px;
+    animation: blink 0.8s infinite;
+    width: 5px;
+    height: 20px;
+}
 
-.side-bar{
+@keyframes blink {
+    0% {
+        background: rgb(233, 233, 233)
+    }
+    50% {
+        background: rgba(22, 22, 22,0)
+    }
+    100% {
+        background: rgb(236, 236, 236)
+    }
+}
+.nav-side-bar{
     width: 70px;
     height: 100vh;
     position: absolute;
     left:0;
     top:0;
+}
+.nav-side-bar-content a{
+    list-style: none;
+    color:rgba(97, 97, 97, 0.5);
+    font-size: 30px;
+    margin:40px 20px
+}
+.links-side-bar{
+    width: 70px;
+    height: 100vh;
+    position: absolute;
+    right:0;
+    top:75%;
+    bottom:0;
 }
 .menu{
     display:block;
@@ -71,27 +109,20 @@ h1{
     margin:40px auto 0;
     cursor: pointer;
 }
-.social-links{
-    width:50px;
+.socials{
     text-align: center;
-    position: absolute;
-    top:65%;
-    transform: translateY(-50%);
-}
-.useful-links{
-    width:50px;
-    text-align: center;
-    position: absolute;
-    bottom:0;
-    transform: translateY(-50%);
-}
-.social-links img,
-.useful-links img
-{
     width: 40px;
-    margin: auto;
+    margin:5px;
     cursor: pointer;
+    transform: translateY(-50%);
+    z-index: 1;
+    transition: 0.3s;
 }
+.socials:hover{
+    background-color: black;
+    border-radius: 50%;
+}
+
 .asteroids{
     width: 100%;
     display: flex;
@@ -159,6 +190,16 @@ h1{
     }
 }
 
+
+.footer{
+    color: rgb(165, 165, 165);
+    position:absolute;
+    bottom:0;
+    justify-content: center;
+    width:100%;
+    display: flex;
+    padding:10px;
+}
 /* responsive styling */
 @media (max-width: 900px) {
     .navbar{
@@ -175,7 +216,8 @@ h1{
 }
 @media (max-width: 400px) {
     .navbar{
-       width:65%;
+        margin-left: 60px;
+       width:75%;
        height: 13%;
     }
     .logo{
@@ -184,5 +226,8 @@ h1{
     h1{
         font-size: 50px;
         line-height: normal;
+    }
+    .menu{
+        margin:30px auto 0;
     }
 }
