--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,52 @@ padding:0;
 font-family: sans-serif;
 
 }
+/* preloader styling */
+.loader-bg{
+    position:fixed;
+    z-index:999999;
+    background:rgb(14, 14, 14);
+    width:100%;
+    height:100%;
+}
+.loader{
+    border: 0 solid transparent;
+    border-radius: 50%;
+    width:150px;
+    height:150px;
+    position:absolute;
+    top:calc(50vh - 75px);
+    left:calc(50vw - 75px);
+}
+.loader:before,.loader:after{
+    content:'';
+    border: 1em solid rgb(78, 78, 78);
+    border-radius:50%;
+    width:inherit;
+    height:inherit;
+    position:absolute;
+    top:0;
+    left:0;
+    animation: loading 1s linear infinite;
+    opacity:0
+}
+.loader:before{
+    animation-delay:.5s;
 
+}
+@keyframes loading{
+    0%{
+        transform: scale(0);
+        opacity:0;
+    }
+    50%{
+        opacity:1;
+    }
+    100%{
+        transform:scale(1);
+        opacity:0;
+    }
+}
 .hero{
     width: 100%;
     height: 100vh;
@@ -13,9 +58,15 @@ font-family: sans-serif;
     background-size: cover;
     overflow: hidden;
     position: relative;
-    
+    background-attachment: fixed;
+    transition: all 0.5s ease;
 }
-
+.hero-discover{
+  width:0;
+}
+.hero-discover-height{
+    height:0;
+}
 .navbar{
     width:85%;
     height:15%;
@@ -33,7 +84,28 @@ font-family: sans-serif;
 .logo .b{
     color:rgb(1, 228, 228)
 }
+.fa-angle-right{
+    font-size: 17px;
+    color: rgb(46, 255, 255);
+    position:absolute;
+    margin-left:3px;
+    animation: dance 2s alternate infinite;
 
+}
+@keyframes dance{
+    from{
+       
+        color: rgb(46, 255, 255);
+    }
+    to{
+       
+        color: rgb(246, 248, 248);
+    }
+}
+
+.bright-design{
+    color:rgb(176, 255, 255)
+}
 button{
     color:#fbfcfd;
     padding:12px 25px;
@@ -47,13 +119,14 @@ button{
 button:hover{
     background-color: rgba(0,0,0,0.5);
 }
-.content{
+.hero .home{
     color: #fbfcfd;
     position:absolute;
     top:50%;
     left:8%;
     transform: translateY(-50%);
     z-index: 2;
+    margin:5px 5px
 }
 h1{
     position: relative;
@@ -62,26 +135,7 @@ h1{
     line-height: 80px;
     
 }
-#cursor {
-    background: black;
-    line-height: 17px;
-    margin-left: 2px;
-    animation: blink 0.8s infinite;
-    width: 5px;
-    height: 20px;
-}
 
-@keyframes blink {
-    0% {
-        background: rgb(233, 233, 233)
-    }
-    50% {
-        background: rgba(22, 22, 22,0)
-    }
-    100% {
-        background: rgb(236, 236, 236)
-    }
-}
 .nav-side-bar{
     width: 70px;
     height: 100vh;
@@ -200,6 +254,10 @@ h1{
     display: flex;
     padding:10px;
 }
+
+.discover-content{
+    display:none;
+}
 /* responsive styling */
 @media (max-width: 900px) {
     .navbar{
@@ -220,6 +278,9 @@ h1{
        width:75%;
        height: 13%;
     }
+    .discover{
+        background-color: rgba(0,0,0,0.5);
+    }
     .logo{
         font-size: 35px;
     }
@@ -229,5 +290,8 @@ h1{
     }
     .menu{
         margin:30px auto 0;
+    }
+    .about #intro{
+        font-size: 20px;
     }
 }
