--- a/styles.css
+++ b/styles.css
@@ -255,8 +255,49 @@ h1{
     padding:10px;
 }
 
-.discover-content{
+.discover-section{
     display:none;
+}
+
+.discover-nav{
+    width:100%;
+    height:8%;
+    position:fixed;
+    background-color: rgba(250,250,250,0.9);
+    display: flex;
+    align-items: center;
+    
+}
+.discover-nav .back-home{
+    font-size: 35px;
+    color:rgb(31, 30, 30,0.8);
+    margin:10px;
+}
+.discover-nav .category{
+    margin-left:5%;
+    font-size: 20px;
+    color: rgb(75, 75, 75);
+    font-weight: 100;
+}
+.discover-nav .logo{
+    color:rgb(31, 30, 30,0.8);
+    margin-left:5px;
+    width:30%;
+    font-weight: 700;
+    font-size: 40px;
+    cursor: pointer;
+}
+.discover-nav .sign-up{
+    margin-left:10%;
+    padding:10px 22px;
+    color: rgb(75, 75, 75);
+}
+.discover-nav .sign-up:hover{
+    margin-left:10%;
+    color: rgb(255, 255, 255);
+}
+.discover-content{
+    padding-top:5%;
 }
 /* responsive styling */
 @media (max-width: 900px) {
