--- a/styles.css
+++ b/styles.css
@@ -266,40 +266,67 @@ h1{
     background-color: rgba(250,250,250,0.9);
     display: flex;
     align-items: center;
-    
+    justify-content: space-between;
 }
 .discover-nav .back-home{
     font-size: 35px;
     color:rgb(31, 30, 30,0.8);
     margin:10px;
 }
+.discover-nav .categories{
+    display:flex;
+    justify-content: space-between;
+    width: 50%;
+}
 .discover-nav .category{
     margin-left:5%;
     font-size: 20px;
     color: rgb(75, 75, 75);
     font-weight: 100;
+    cursor: pointer;
 }
+.active-category{
+    border-bottom: 1px solid grey;
+    animation: slide-in all ease 0.5s;
+
+}
+
+@keyframes slide-in{
+    from{
+        border-bottom: 0;
+    }
+    to{
+        border-bottom: 1px;
+    }
+}
+
 .discover-nav .logo{
     color:rgb(31, 30, 30,0.8);
     margin-left:5px;
-    width:30%;
+    width:25%;
     font-weight: 700;
     font-size: 40px;
     cursor: pointer;
 }
 .discover-nav .sign-up{
-    margin-left:10%;
     padding:10px 22px;
     color: rgb(75, 75, 75);
 }
+.discover-nav .menu-btn{
+    display:none;
+}
 .discover-nav .sign-up:hover{
-    margin-left:10%;
     color: rgb(255, 255, 255);
 }
 .discover-content{
     padding-top:5%;
 }
 /* responsive styling */
+@media (max-width: 800px) {
+    .discover-nav .category,.discover-nav .sign-up{
+      display: none;
+    }
+}
 @media (max-width: 900px) {
     .navbar{
        width:80%
