--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,30 +1,14 @@
 .hero{
-    width: 100%;
     height: 100vh;
-    background-image: linear-gradient(0deg, rgba(17, 17, 17, 0.3), rgba(37, 37, 37, 0.3)), url(moon.jpg);
+  
     background-position: center;
     background-size: cover;
     overflow: hidden;
     position: relative;
-    background-attachment: fixed;
+    background-attachment: fixed; 
     transition: all 0.5s ease;
 }
 
-.hero-discover{
-  width:0;
-  background-color: rgb(24, 24, 24);
-}
-.hero-discover-height{
-    height:0;
-}
-.navbar{
-    width:85%;
-    height:15%;
-    margin:auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
 .logo{
     color:white;
     font-weight: 700;
@@ -115,7 +99,7 @@ h1{
 }
 .socials{
     text-align: center;
-    width: 40px;
+    width: 30px;
     margin:5px;
     cursor: pointer;
     transform: translateY(-50%);
@@ -194,13 +178,45 @@ h1{
     }
 }
 
+@media (max-width: 800px) {
 
-.footer{
-    color: rgb(165, 165, 165);
-    position:absolute;
-    bottom:0;
-    justify-content: center;
-    width:100%;
-    display: flex;
-    padding:10px;
+    .items-title{
+        display:block
+    }
+}
+@media (max-width: 900px) {
+    .navbar{
+       width:80%
+    }
+}
+@media (max-width: 600px) {
+    .navbar{
+       width:70%
+    }
+    h1{
+        font-size: 70px;
+    }
+}
+@media (max-width: 400px) {
+    .navbar{
+        margin-left: 60px;
+       width:75%;
+       height: 13%;
+    }
+    .discover{
+        background-color: rgba(0,0,0,0.5);
+    }
+    .logo{
+        font-size: 35px;
+    }
+    h1{
+        font-size: 50px;
+        line-height: normal;
+    }
+    .menu{
+        margin:30px auto 0;
+    }
+    .about #intro{
+        font-size: 20px;
+    }
 }
