--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin&family=Caveat&display=swap');
+
 * {
   margin:0;
   padding:0;
-  font-family: sans-serif;
-  
+  font-family:'Cabin', sans-serif;
   }
 
 body {
+  scroll-behavior:smooth;
   margin: 0;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(24, 24, 24);
+ 
 }
 
 code {
