--- a/src/components/Explore.css
+++ b/src/components/Explore.css
@@ -9,6 +9,7 @@
     align-items:top;
     width:100%;
     display:flex;
+    flex-wrap: wrap;
     min-height: 70vh;
     justify-content: space-evenly;
     margin-bottom:100px;
@@ -47,7 +48,8 @@
 
 .image{
     width:40%;
-    position:relative
+    position:relative;
+    min-width:300px
 }
 .image .date{
     position:absolute;
@@ -62,6 +64,7 @@
 }
 .info{
    width: 40%; 
+   min-width:300px
   
 }
 .more{
