--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,12 +1,14 @@
 .navbar{
-    position:absolute;
+    position:fixed;
+    top:0;
     z-index:1;
-    width:90%;
-    padding-left:20px ;
-    height:15%;
+    width:95%;
+    height:10%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin:20px;
+    margin-top:0
 }
 .logo{
     color:white;
@@ -57,3 +59,8 @@ button:hover{
     margin:40px auto 0;
     cursor: pointer;
 }
+/* @media (max-width: 900px) {
+    .navbar{
+       width:80%
+    }
+} */
